spladeの検証コードを理解するためのコメント付与 & 動作確認

--- a/splade/splade_japanese_playground.ipynb
+++ b/splade/splade_japanese_playground.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ソース\n",
+    "https://huggingface.co/aken12/splade-japanese-v3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
